# f1tenth-autonomous-racing

./: .gitignore  LICENSE  README.md
docs/: learned-control.md  reactive-control.md
learned_control/: package.xml  setup.cfg  setup.py
learned_control/bc/: bc_model.pth  model.py  train.py
learned_control/config/: safety_params.yaml
learned_control/launch/: bc_launch.py  sac_demo_launch.py  sac_train_launch.py
learned_control/nodes/: bc_demo_node.py  sac_demo_node.py  sac_train_node.py  safety_node.py
learned_control/preprocessing/: extract_dataset.py  preprocess.py
learned_control/processed/: scalers.npz
learned_control/sac/: import_sb3.py  model.py  reward.py  sac_checkpoint.pth  sac_checkpoint_best.pth  train.py
reactive_control/: package.xml  setup.cfg  setup.py
reactive_control/config/: cv_params.yaml  gap_follow_params.yaml  safety_params.yaml  wall_follow_params.yaml
reactive_control/launch/: cv_launch.py  gap_follow_launch.py  wall_follow_launch.py
reactive_control/reactive_control/: cv_node.py  gap_follow_node.py  pid.py  safety_node.py  wall_follow_node.py
